--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "bootstrap": "^4.4.1",
+    "lodash": "^4.17.21",
     "nab-angular2-jsonapi": "^8.2.9",
     "rxjs": "~6.5.3",
     "tslib": "^2.0.0",
